- Added project summary

--- a/.gitignore
+++ b/.gitignore
@@ -228,3 +228,5 @@ Ullrich-MountainSnowpack-ProjectDescription.pdf
 
 
 Ullrich-MountainSnowpack-References.pdf
+
+Ullrich-MountainSnowpack-Summary.pdf
