- Small updates to supplementary documents

--- a/.gitignore
+++ b/.gitignore
@@ -230,3 +230,7 @@ Ullrich-MountainSnowpack-ProjectDescription.pdf
 Ullrich-MountainSnowpack-References.pdf
 
 Ullrich-MountainSnowpack-Summary.pdf
+
+Ullrich-MountainSnowpack-DataManagement.pdf
+
+Ullrich-MountainSnowpack-BiographicalSketch.pdf
