- Some corrections to supplementary documents - Cleanup of project description

--- a/.gitignore
+++ b/.gitignore
@@ -234,3 +234,5 @@ Ullrich-MountainSnowpack-Summary.pdf
 Ullrich-MountainSnowpack-DataManagement.pdf
 
 Ullrich-MountainSnowpack-BiographicalSketch.pdf
+
+Ullrich-MountainSnowpack-Facilities.pdf
